--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
   apt:
     packages:
       - libgtk-3-dev
+      - libatk1.0-dev
       - libdbus-1-dev
       - libzmq3-dev
 language: rust
