--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
     packages:
       - libgtk-3-dev
       - libatk1.0-dev
+      - libpango1.0-dev
       - libdbus-1-dev
       - libzmq3-dev
 language: rust
