--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: xenial
+dist: artful
 sudo: false
 addons:
   apt:
@@ -6,6 +6,7 @@ addons:
       - libgtk-3-dev
       - libatk1.0-dev
       - libpango1.0-dev
+      - libcairo2-dev
       - libdbus-1-dev
       - libzmq3-dev
 language: rust
