--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ addons:
     packages:
       - libgtk-3-dev
       - libatk1.0-dev
+      - libgdk-pixbuf2.0-dev
       - libpango1.0-dev
+      - libpango-1.0-0
       - libcairo2-dev
       - libdbus-1-dev
       - libzmq3-dev
