--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ addons:
   apt:
     packages:
       - libgtk-3-dev
+      - libatk1.0-0
       - libatk1.0-dev
       - libgdk-pixbuf2.0-dev
-      - libpango1.0-dev
       - libpango-1.0-0
+      - libpango1.0-dev
       - libcairo2-dev
       - libdbus-1-dev
       - libzmq3-dev
