--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
     packages:
       - libgtk-3-0
       - libgtk-3-dev
+      - libglib2.0-dev
       - libatk1.0-0
       - libatk1.0-dev
       - libgdk-pixbuf2.0-dev
