Update .spec File

--- a/support/desktop/precached-gui.desktop
+++ b/support/desktop/precached-gui.desktop
@@ -3,5 +3,8 @@ Version=0.1.0
 Type=Application
 Name=precached-gui
 Comment=A GTK+ based GUI for precached
+Categories=System;
+Terminal=false
+StartupNotify=true
 Exec=/usr/bin/precached-gui
 Icon=precached
